VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedShiftedUp.err
[8MB/2.263GB][  0%][>                                                 ][4MB/s]  [40MB/2.263GB][  1%][>                                                 ][13.33MB/s]  [96MB/2.263GB][  4%][==>                                               ][24MB/s]  [160MB/2.263GB][  6%][===>                                              ][32MB/s]  [216MB/2.263GB][  9%][====>                                             ][36MB/s]  [272MB/2.263GB][ 11%][=====>                                            ][38.86MB/s]  [336MB/2.263GB][ 14%][=======>                                          ][42MB/s]  [400MB/2.263GB][ 17%][========>                                         ][44.44MB/s]  [456MB/2.263GB][ 19%][=========>                                        ][45.6MB/s]  [496MB/2.263GB][ 21%][==========>                                       ][45.09MB/s]  [536MB/2.263GB][ 23%][===========>                                      ][44.67MB/s]  [584MB/2.263GB][ 25%][============>                                     ][44.92MB/s]  [624MB/2.263GB][ 26%][=============>                                    ][44.57MB/s]  [664MB/2.263GB][ 28%][==============>                                   ][44.27MB/s]  [696MB/2.263GB][ 30%][===============>                                  ][43.5MB/s]  [728MB/2.263GB][ 31%][===============>                                  ][42.82MB/s]  [768MB/2.263GB][ 33%][================>                                 ][42.67MB/s]  [808MB/2.263GB][ 34%][=================>                                ][42.53MB/s]  [848MB/2.263GB][ 36%][==================>                               ][42.4MB/s]  [888MB/2.263GB][ 38%][===================>                              ][42.29MB/s]  [928MB/2.263GB][ 40%][====================>                             ][42.18MB/s]  [976MB/2.263GB][ 42%][=====================>                            ][42.43MB/s]  [1008MB/2.263GB][ 43%][=====================>                            ][42MB/s]  [1.016GB/2.263GB][ 44%][======================>                           ][41.6MB/s]  [1.047GB/2.263GB][ 46%][=======================>                          ][41.23MB/s]  [1.078GB/2.263GB][ 47%][=======================>                          ][40.89MB/s]  [1.117GB/2.263GB][ 49%][========================>                         ][40.86MB/s]  [1.148GB/2.263GB][ 50%][=========================>                        ][40.55MB/s]  [1.188GB/2.263GB][ 52%][==========================>                       ][40.53MB/s]  [1.219GB/2.263GB][ 53%][==========================>                       ][40.26MB/s]  [1.258GB/2.263GB][ 55%][===========================>                      ][40.25MB/s]  [1.289GB/2.263GB][ 56%][============================>                     ][40MB/s]  [1.328GB/2.263GB][ 58%][=============================>                    ][40MB/s]  [1.359GB/2.263GB][ 60%][==============================>                   ][39.77MB/s]  [1.398GB/2.263GB][ 61%][==============================>                   ][39.78MB/s]  [1.43GB/2.263GB][ 63%][===============================>                  ][39.57MB/s]  [1.461GB/2.263GB][ 64%][================================>                 ][39.37MB/s]  [1.492GB/2.263GB][ 65%][================================>                 ][39.18MB/s]  [1.523GB/2.263GB][ 67%][=================================>                ][39MB/s]  [1.562GB/2.263GB][ 69%][==================================>               ][39.02MB/s]  [1.594GB/2.263GB][ 70%][===================================>              ][38.86MB/s]  [1.633GB/2.263GB][ 72%][====================================>             ][38.88MB/s]  [1.664GB/2.263GB][ 73%][====================================>             ][38.73MB/s]  [1.703GB/2.263GB][ 75%][=====================================>            ][38.76MB/s]  [1.742GB/2.263GB][ 76%][======================================>           ][38.78MB/s]  [1.781GB/2.263GB][ 78%][=======================================>          ][38.81MB/s]  [1.812GB/2.263GB][ 80%][========================================>         ][38.67MB/s]  [1.852GB/2.263GB][ 81%][========================================>         ][38.69MB/s]  [1.891GB/2.263GB][ 83%][=========================================>        ][38.72MB/s]  [1.93GB/2.263GB][ 85%][==========================================>       ][38.75MB/s]  [1.969GB/2.263GB][ 86%][===========================================>      ][38.77MB/s]  [2.008GB/2.263GB][ 88%][============================================>     ][38.79MB/s]  [2.047GB/2.263GB][ 90%][=============================================>    ][38.81MB/s]  [2.094GB/2.263GB][ 92%][==============================================>   ][38.98MB/s]  [2.141GB/2.263GB][ 94%][===============================================>  ][39.14MB/s]  [2.188GB/2.263GB][ 96%][================================================> ][39.3MB/s]  [2.242GB/2.263GB][ 99%][=================================================>][39.59MB/s]  [2.263GB/2.263GB][100%][==================================================][39.96MB/s]  [2.263GB/2.263GB][100%][==================================================][39.96MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_1671/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_1671/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
